--- a/src/modules/non-responsive/background-color.scss
+++ b/src/modules/non-responsive/background-color.scss
@@ -1,9 +1,12 @@
 @use '../../functions';
 @use '../../variables';
 
+$global-prefix: variables.$global-prefix;
+$name: variables.$background-color-name;
+
 @mixin background-color() {
   @each $color, $value in variables.$colors {
-    #{functions.construct-class-name(variables.$global-prefix, bg, $color)} {
+    #{functions.construct-class-name($global-prefix, $name, $color)} {
       background-color: $value;
     }
   }
