--- a/src/modules/non-responsive/border-color.scss
+++ b/src/modules/non-responsive/border-color.scss
@@ -1,9 +1,12 @@
 @use '../../functions';
 @use '../../variables';
 
+$global-prefix: variables.$global-prefix;
+$prefix: variables.$border-color-prefix;
+
 @mixin border-color() {
   @each $color, $value in variables.$colors {
-    #{functions.construct-class-name(variables.$global-prefix, b-- + $color)} {
+    #{functions.construct-class-name($global-prefix, $prefix + $color)} {
       border-color: $value;
     }
   }
