--- a/src/modules/non-responsive/cursor.scss
+++ b/src/modules/non-responsive/cursor.scss
@@ -1,9 +1,12 @@
 @use '../../functions';
 @use '../../variables';
 
+$global-prefix: variables.$global-prefix;
+$name: variables.$cursor-name;
+
 @mixin cursor() {
   @each $cursor in variables.$cursors {
-    #{functions.construct-class-name(variables.$global-prefix, cursor, $cursor)} {
+    #{functions.construct-class-name($global-prefix, $name, $cursor)} {
       cursor: $cursor;
     }
   }
