--- a/src/modules/non-responsive/hover-color.scss
+++ b/src/modules/non-responsive/hover-color.scss
@@ -1,6 +1,9 @@
 @use '../../functions';
 @use '../../variables';
 
+$global-prefix: variables.$global-prefix;
+$name: variables.$hover-color-name;
+
 @mixin hover-color() {
   @each $color, $value in variables.$colors {
     #{functions.construct-class-name(variables.$global-prefix, hover, $color)}:hover {
