--- a/src/modules/non-responsive/opacity.scss
+++ b/src/modules/non-responsive/opacity.scss
@@ -1,9 +1,12 @@
 @use '../../functions';
 @use '../../variables';
 
+$global-prefix: variables.$global-prefix;
+$name: variables.$opacity-name;
+
 @mixin opacity() {
   @each $opacity, $value in variables.$opacity-levels {
-    #{functions.construct-class-name(variables.$global-prefix, variables.$opacity-name, $opacity)} {
+    #{functions.construct-class-name($global-prefix, $name, $opacity)} {
       opacity: $value;
     }
   }
