--- a/src/modules/non-responsive/text-decoration.scss
+++ b/src/modules/non-responsive/text-decoration.scss
@@ -1,9 +1,11 @@
 @use '../../functions';
 @use '../../variables';
 
+$global-prefix: variables.$global-prefix;
+
 @mixin text-decoration() {
   @each $name, $value in variables.$text-decorations {
-    #{functions.construct-class-name(variables.$global-prefix, $name)} {
+    #{functions.construct-class-name($global-prefix, $name)} {
       text-decoration: $value;
     }
   }
