--- a/src/modules/non-responsive/visibility.scss
+++ b/src/modules/non-responsive/visibility.scss
@@ -1,9 +1,11 @@
 @use '../../functions';
 @use '../../variables';
 
+$global-prefix: variables.$global-prefix;
+
 @mixin visibility() {
   @each $name, $value in variables.$visibilities {
-    #{functions.construct-class-name(variables.$global-prefix, $name)} {
+    #{functions.construct-class-name($global-prefix, $name)} {
       visibility: $value;
     }
   }
